# postit

./: Cargo.toml  README.md  api_server.go  go.mod  go.sum  kv.proto  main.go
database/: db.go
src/: load_save.rs  main.rs
src/db/: db.rs  models.rs
static/: boards.html  esbuild.config.mjs  index.html  package-lock.json  package.json  postit.html  tsconfig.json
static/css/: style.css
static/js/: main.js
static/js/components/: Api.js  Api.ts  ColorChanger.js  ColorChanger.ts  Colors.ts  CouchClient.ts  Dialog.ts  EditNote.js  EditNote.ts  NoteComponent.js  NoteComponent.ts  NoteService.ts  SelectionBox.js  SelectionBox.ts  Util.ts  WhiteboardComponent.js  WhiteboardComponent.ts  ZoomService.ts  autozoom.ts  esbuild.config.mjs  main.js  package-lock.json  package.json  tsconfig.json  vue-types.d.ts
static/src/: main.ts
static/src/components/: Api.ts  ColorChanger.ts  CouchClient.ts  Dialog.ts  EditNote.ts  NoteComponent.ts  NoteService.ts  SelectionBox.ts  Util.ts  WhiteboardComponent.ts  ZoomService.ts
