[package]
name = "postit"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = "8.4.0"
serde = "1.0.203"
sqlx = { version="0.7.4", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3.26"
tokio = "1.38.0"
anyhow = "1.0.86"
